bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_missing_error_attr.rs
use macbat::Error;
#[derive(Error)]
enum E {
    #[error("ok")]
    A,
    B,
}
fn main() {}
